cmake_minimum_required(VERSION 3.16)
project(BOJ__)

set(CMAKE_CXX_STANDARD 14)

add_executable(BOJ__
#        main.cpp
#        "Input_output and arithmetic operation/BOJ2557.cpp"
#        "Input_output and arithmetic operation/BOJ10718.cpp"
#        "Input_output and arithmetic operation/BOJ10171.cpp"
#        "Input_output and arithmetic operation/BOJ10172.cpp"
#        "Input_output and arithmetic operation/BOJ1000.cpp"
#        "Input_output and arithmetic operation/BOJ1001.cpp"
#        "Input_output and arithmetic operation/BOJ10998.cpp"
#        "Input_output and arithmetic operation/BOJ1008.cpp"
#        "Input_output and arithmetic operation/BOJ10869.cpp"
#        "Input_output and arithmetic operation/BOJ10430.cpp"

        "if statement/BOJ1330.cpp"
#        "if statement/BOJ9498.cpp"
#        "if statement/BOJ2753.cpp"
#        "if statement/BOJ14681.cpp"
#        "if statement/BOJ2884.cpp"


        )