cmake_minimum_required(VERSION 3.15)
project(C1 C)

set(CMAKE_C_STANDARD 99)

add_executable(C1 #"201901586_Yonghun Park_01.c"
#        1ton.c #123.c
#        lec3.c
#        exam.c
#        checking.c
#        check.c
#        codeinhyunjun.c
#        dust.c
#        "201901586_Yonghun Park_LAB5_1.c"
#        "201901586_Yonghun Park_LAB5_2.c"
#        구버젼/dustmq.c
#        matrix.c
#        muhamad.c
#        "201901586_Yonghun Park_02.c"
#        "201901586_Yonghun Park.Midterm_exam_Binary_Search"
#        123.c
#        "201901586_Yonghun Park.Midterm_exam"
#        201901586_YonghunPark_LAB8.c
#        max.c 201901586_YonghunPark_LAB9.c
#        "201901586_Yonghun Park_LAB4"
#        "201901586_Yonghun Park_LAB5_2"
#        201901586_YonghunPark_LAB4_LAB9.c
#        201901586_YonghunPark_LAB5_2_LAB9.c
#        0609.c
#        201910586_YonghunPark_0609.c
#        201901586_YonghunPark_LAB10.c
#        201901586_YonghunPark_LAB11.c
        201901586_YonghunPark_Final_exam.c)