cmake_minimum_required(VERSION 3.16)
project(test)

set(CMAKE_CXX_STANDARD 14)

add_executable(test
        #        Assignment1.cpp
        #        Credit.cpp

        #        ---------------------------------------------------------------------------
        #        "Assignment1/1_Sum of numbers.cpp"
        #        "Assignment1/2_Sum of even numbers.cpp"
        #        "Assignment1/3_Sum of odd numbers.cpp"
        #        ---------------------------------------------------------------------------
        #        Lab3/GCD.cpp
        #        Lab3/Prime_Numbers.cpp
        #        Lab3/Leap_Year.cpp
        #        ---------------------------------------------------------------------------
        #        Lab4/Sum_of_Prime_numbers.cpp
        #        Lab4/Sum_of_Prime_numbers.cpp
        #        ---------------------------------------------------------------------------
        #        Lab5/How_many_different_digits.cpp
        #        Lab5/Second_Maximum_Value.cpp
        #        Lab5/Greatest_common_division.cpp
        #        ---------------------------------------------------------------------------
        #        E-class_Assignment/Raise_To_Power.cpp
        #        E-class_Assignment/Area_of_ring.cpp
        #        ---------------------------------------------------------------------------
        #        Lab6/Decimal to Binary.cpp
        #        Lab6/Double Factorial_copy.cpp
        #        ---------------------------------------------------------------------------
        #        Lab7/Count_character_from_string.cpp
        #        Lab7/Rank_of_score.cpp
        #        Lab7/Length_of_string.cpp
        #        ---------------------------------------------------------------------------
        #        Lab8/Shift_Operation.cpp
        #        Lab8/Multi-dimension_Array.cpp
        #        Lab8/Adder_with_Logical_Operations.cpp
                Lab8/XOR_Password_Masking.cpp
        #        ---------------------------------------------------------------------------
)